# limerick-bot

./: .gitignore  README.md  download_model.bash  invite_link  main.py  near_rhyme_experiment.py  phonemizer_repl.py  pyproject.toml  rhymes.tsv  syllabify.py
